restrict change role to first user
